2006-09-09  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + Uses 'svnadmin -q' for disabling useless verbosity.

2006-09-08  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload:
	  + Fixed a bug with the FTP TLS code, use the correct API instead of the
	  one of Net::FTP.

2006-09-08  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Alexis Sukrieh & Michael Guerin ]

	* Support for FTP over TLS transfers.
	* New configuration key, `BM_UPLOAD_FTP_SECURE' in
	  backup-manager.conf.tpl for enabling the FTP over TLS transfer.

	[ Alexis Sukrieh ]
	
	* Rewrite of the FTP part of the code in backup-manager-upload.
	* Documentation about BM_UPLOAD_FTP_SECURE configuration variable.

2006-09-06  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Bjorn Wetzels ]
	
	* All messages translated in po/nl.po.

2006-09-06  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Miroslav Kure ]

	* All messages transalted in po/cs.po.

	[ Matteo Frare Barutti ]

	* All messages translated in po/it.po.

	[ Alexis Sukrieh ]

	* Added nl in po/LINGUAS
	* Applied review from Stephane Blondon in po/fr.po.


2006-09-05  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Sven Joachim ]

	* Fixes bad messages in 
	  + lib/burning-methods.sh
	  + lib/dialog.sh:
	* All messages translated in de.po

	[ Alexis Sukrieh ]

	* Gettext files update
	  + po/backup-manager.pot, po/cs.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/vi.po.

2006-09-05  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Clytie Sidall ]

	* All messages translated in po/vi.po.

2006-09-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* po/LINGUAS
	  + Added all supported languages in LINGUAS (thanks to Clytie Sidall).

2006-09-04  Alexis Sukrieh  <sukria@backup-manager.org>

	[ Matteo Frare Barutti ]

	* All messages translated in po/it.po.

2006-09-04  Alexis Sukrieh  <sukria@backup-manager.org>
	
	[ Carlos Galisteo ]

	* All messages translated in po/es.po.
